--- a/nginx.conf
+++ b/nginx.conf
@@ -1,12 +1,12 @@
 server {
         listen 80 default_server;
-        server_name develop.unova.io;
+        server_name develop.***.io;
         root /var/www/html;
         index index.html index.htm index.nginx-debian.html;
         #return 301 https://develop.unova.io$request_uri;
 
          location /unova/ {
-                proxy_pass http://localhost:8070;
+                proxy_pass http://localhost:8090;
                 proxy_http_version 1.1;
                 proxy_set_header Upgrade $http_upgrade;
                 proxy_set_header Connection 'upgrade';
@@ -15,7 +15,7 @@ server {
         }
 
         location /api/ {
-                proxy_pass http://localhost:7079;
+                proxy_pass http://localhost:7000;
                 proxy_http_version 1.1;
                 proxy_set_header Upgrade $http_upgrade;
                 proxy_set_header Connection 'upgrade';
@@ -29,13 +29,13 @@ server {
         listen 443 ssl;
 
         server_name develop.unova.io;
-        #return 301 https://develop.unova.io$request_uri;
+        #return 301 https://develop.***.io$request_uri;
         root /var/www/html;
 
         # Add index.php to the list if you are using PHP
         index index.html index.htm index.nginx-debian.html;
-        ssl_certificate /etc/nginx/ssl/unova_io.crt;
-        ssl_certificate_key /etc/nginx/ssl/unova_io.key;
+        ssl_certificate /etc/nginx/ssl/***.crt;
+        ssl_certificate_key /etc/nginx/ssl/***.key;
 
         location /api/ {
                 proxy_pass http://localhost:7079;
